--- a/pages/faqs.html
+++ b/pages/faqs.html
@@ -9,11 +9,7 @@
 <body>
     <!-- Hero Section with Background Image -->
     <div class="hero-section">
-        <!-- Left logo on white background -->
-        <div class="hero-logo-left">
-            <img src="../images/logos/earthworks-logo.png" alt="EarthWorks Logo" width="120" height="120">
-        </div>
-    
+
         <!-- Center image container -->
         <div class="hero-background-container">
             <img src="../images/backgrounds/cyber-being2.jpg" alt="FAQs Banner" class="hero-background">
@@ -31,10 +27,6 @@
             </div>
         </div>
     
-        <!-- Right side - NSF logo only -->
-        <div class="nsf-container">
-            <img src="../images/logos/nsf-logo.png" alt="NSF Logo" class="nsf-logo">
-        </div>
     </div>
 
     <!-- Navigation -->
@@ -43,8 +35,8 @@
             <a href="../index.html" class="nav-link">Home</a>
             <a href="team.html" class="nav-link">Our Team</a>
             <a href="faqs.html" class="nav-link active">FAQs</a>
-            <a href="code.html" class="nav-link">Code and Data</a>
-            <a href="papers.html" class="nav-link">Case Studies</a>
+            <a href="code.html" class="nav-link">Software</a>
+            <a href="papers.html" class="nav-link">Demos</a>
             <a href="related.html" class="nav-link">Tools</a>
             <a href="education.html" class="nav-link">Training</a>
         </div>
@@ -68,11 +60,11 @@
 
                 <div class="faq-item">
                     <button class="faq-question">
-                        What services do you offer?
+                        What products and services do you offer?
                         <span class="faq-icon">+</span>
                     </button>
                     <div class="faq-answer">
-                        We offer ES-AI consulting, model development, training, and implementation services. Our expertise includes high-performance computing, earth system modeling, and AI/ML integration.
+                        We offer HPC refactoring, AI model development and fine tuning consulting and training services. Products we will be offering include our ExaFactory-F90 refactoring software in three tiers: Basic (free); Pro Individual (pay) and Pro Teams (pay per seat). We will be offering a free "kick the tires" access to our software tools soon!
                     </div>
                 </div>
 
@@ -192,8 +184,8 @@
         <div class="logo-strip-container">
             <div class="logo-strip">
                 <img src="../images/logos/csu-logo.png" alt="CSU Logo" height="64" width="auto">
-                <img src="../images/logos/ncar-logo.png" alt="NCAR Logo" height="64" width="auto">
-                <img src="../images/logos/nsf-logo.png" alt="NSF Logo" height="64" width="auto">
+                <img src="../images/logos/mytorch-logo.png" alt="Mytorch Logo" height="64" width="auto">
+                <img src="../images/logos/nvidia-logo.png" alt="NVidia Logo" height="64" width="auto">
             </div>
         </div>
     </footer>
