--- a/pages/related.html
+++ b/pages/related.html
@@ -9,11 +9,7 @@
 <body>
     <!-- Hero Section with Background Image -->
     <div class="hero-section">
-        <!-- Left logo on white background -->
-        <div class="hero-logo-left">
-            <img src="../images/logos/earthworks-logo.png" alt="EarthWorks Logo" width="120" height="120">
-        </div>
-    
+
         <!-- Center image container -->
         <div class="hero-background-container">
             <img src="../images/backgrounds/cyber-being2.jpg" alt="Tools Banner" class="hero-background">
@@ -31,10 +27,6 @@
             </div>
         </div>
     
-        <!-- Right side - NSF logo only -->
-        <div class="nsf-container">
-            <img src="../images/logos/nsf-logo.png" alt="NSF Logo" class="nsf-logo">
-        </div>
     </div>
 
     <!-- Navigation -->
@@ -43,8 +35,8 @@
             <a href="../index.html" class="nav-link">Home</a>
             <a href="team.html" class="nav-link">Our Team</a>
             <a href="faqs.html" class="nav-link">FAQs</a>
-            <a href="code.html" class="nav-link">Code and Data</a>
-            <a href="papers.html" class="nav-link">Case Studies</a>
+            <a href="code.html" class="nav-link">Software</a>
+            <a href="papers.html" class="nav-link">Demos</a>
             <a href="related.html" class="nav-link active">Tools</a>
             <a href="education.html" class="nav-link">Training</a>
         </div>
@@ -122,8 +114,8 @@
         <div class="logo-strip-container">
             <div class="logo-strip">
                 <img src="../images/logos/csu-logo.png" alt="CSU Logo" height="64" width="auto">
-                <img src="../images/logos/ncar-logo.png" alt="NCAR Logo" height="64" width="auto">
-                <img src="../images/logos/nsf-logo.png" alt="NSF Logo" height="64" width="auto">
+                <img src="../images/logos/mytorch-logo.png" alt="Mytorch Logo" height="64" width="auto">
+                <img src="../images/logos/nvidia-logo.png" alt="NVidia Logo" height="64" width="auto">
             </div>
         </div>
     </footer>
