--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="funding-section">
                     <h3>Funding</h3>
-                    <p>Supported by the National Science Foundation</p>
+                    <p>Currently seeking funding!</p>
                 </div>
             </div>
         </div>
