Added Accelerate and Access Focus Areas, new thumbnails and new formatting.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             <div class="focus-areas">
                 <div class="focus-item">
-                    <img src="images/thumbnails/research.jpg" alt="Research" class="focus-thumbnail">
+                    <img src="images/thumbnails/fa1-acceleration.jpg" alt="Acceleration" class="focus-thumbnail">
                     <div class="focus-content">
                         <h3>Imagine... reducing the time and cost of refactoring legacy codes by 10x to 100x.</h3>
                         <p>AreandDee is tackling this challenge with a four-fold strategy.<p>
@@ -58,17 +58,17 @@
                     </div>
                 </div>
                 <div class="focus-item">
-                    <img src="images/thumbnails/better-models.jpg" alt="Better Models" class="focus-thumbnail">
+                    <img src="images/thumbnails/mytorch-wormhole.jpg" alt="Access to AI Resources" class="focus-thumbnail">
                     <div class="focus-content">
-                        <h3>Imagine developing and testing AI models on any accelerator from your desktop.</h3>
-                        <p>AreandDee is working with our technology partner, MyTorch.ai to make it happen.</p>
+                        <h3>Imagine zero AI resource hassles...developing AI models on any accelerator transparently from your desktop.</h3>
+                        <p>AreandDee is working with our technology partner, MyTorch.Net to make it happen.</p>
                         <a href="pages/focus-area-2.html" class="focus-link">Learn More →</a>
                     </div>
                 </div>
                 <div class="focus-item">
-                    <img src="images/thumbnails/digital-earth.jpg" alt="Faster Models" class="focus-thumbnail">
+                    <img src="images/thumbnails/digital-earth.jpg" alt="Digital Twins" class="focus-thumbnail">
                     <div class="focus-content">
-                        <h3>Imagine integrating your proprietary data with our open-source models to gain a competitive edge.</h3>
+                        <h3>Imagine pairing your proprietary data with open-source models to create a "best in class" Digital Twin.</h3>
                         <p>AreandDee can show you how...</p>
                         <a href="pages/focus-area-3.html" class="focus-link">Learn More →</a>
                     </div>
@@ -77,7 +77,7 @@
                     <img src="images/thumbnails/mentorship.jpg" alt="Training" class="focus-thumbnail">
                     <div class="focus-content">
                         <h3>Imagine receiving the training and support you need from a team of experts.</h3>
-                        <p>Creating effective digital twins requires domain experts that understand the science.</p>
+                        <p>Creating effective digital twins requires domain experts that understand the science, software, and data challenges.</p>
                         <a href="pages/focus-area-4.html" class="focus-link">Learn More →</a>
                     </div>
                 </div>
