--- a/pages/team.html
+++ b/pages/team.html
@@ -148,7 +148,7 @@
                 </div>
                 <div class="funding-section">
                     <h3>Funding</h3>
-                    <p>Supported by the National Science Foundation</p>
+                    <p>Currently seeking funding.</p>
                 </div>
             </div>
         </div>
