trimmed tab count, fixed poor image choice for training and converged on UWyoming, MyTorch and NVIDIA as the partners

--- a/pages/consulting.html
+++ b/pages/consulting.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AreandDee Demos</title>
+    <title>Consulting - AreandDee LLC</title>
     <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
@@ -12,8 +12,8 @@
 
         <!-- Center image container -->
         <div class="hero-background-container">
-            <img src="../images/backgrounds/cyber-being2.jpg" alt="Demos Banner" class="hero-background">
-            <h1 class="hero-title">Demos</h1>
+            <img src="../images/backgrounds/cyber-being2.jpg" alt="Consulting Banner" class="hero-background">
+            <h1 class="hero-title">Consulting</h1>
         
             <!-- Search container inside image area -->
             <div class="search-container">
@@ -36,8 +36,7 @@
             <a href="team.html" class="nav-link">Our Team</a>
             <a href="faqs.html" class="nav-link">FAQs</a>
             <a href="code.html" class="nav-link">Software</a>
-            <a href="papers.html" class="nav-link active">Demos</a>
-            <a href="related.html" class="nav-link">Tools</a>
+            <a href="consulting.html" class="nav-link active">Consulting</a>
             <a href="education.html" class="nav-link">Training</a>
         </div>
     </nav>
@@ -45,35 +44,21 @@
     <!-- Main Content -->
     <main class="main-content">
         <div class="content-container">
-            <h2 class="section-title">Research Papers and Case Studies</h2>
+            <h2 class="section-title">Consulting Services</h2>
             
-            <div class="papers-container">
-                <section class="papers-section">
-                    <h3>Published Research</h3>
-                    <div class="paper-list">
-                        <div class="paper-item">
-                            <h4>Mixed Precision in Weather and Climate Models</h4>
-                            <p class="authors">Loft, R., et al.</p>
-                            <p class="journal">Journal of Advances in Earth System Computing, 2024</p>
-                            <p class="abstract">Investigation of FP32 precision in weather and climate models, demonstrating significant performance improvements while maintaining accuracy.</p>
-                            <div class="paper-links">
-                                <a href="#" class="paper-link">Read Paper</a>
-                                <a href="#" class="paper-link">Download PDF</a>
-                            </div>
+            <div class="consulting-container">
+                <section class="consulting-section">
+                    <h3>Services</h3>
+                    <div class="service-list">
+                        <div class="service-item">
+                            <h4>AI-Physics Model Integration</h4>
+                            <p>Description: Expert consulting on integrating AI and physics-based models</p>
+                            <p>Contact us for details: <span class="contact-info">contact@areanddee.com</span></p>
                         </div>
-                    </div>
-                </section>
-
-                <section class="papers-section">
-                    <h3>Technical Reports</h3>
-                    <div class="report-list">
-                        <div class="paper-item">
-                            <h4>Performance Analysis of FP32 in CAM</h4>
-                            <p class="authors">Technical Report Series</p>
-                            <p class="abstract">Detailed analysis of FP32 precision implementation in the Community Atmosphere Model.</p>
-                            <div class="paper-links">
-                                <a href="#" class="paper-link">View Report</a>
-                            </div>
+                        <div class="service-item">
+                            <h4>Legacy Code Acceleration</h4>
+                            <p>Description: Specialized consulting for optimizing and refactoring legacy code for modern accelerators</p>
+                            <p>Contact us for details: <span class="contact-info">contact@areanddee.com</span></p>
                         </div>
                     </div>
                 </section>
@@ -87,12 +72,12 @@
             <div class="footer-content">
                 <div class="contact-section">
                     <h3>Contact</h3>
-                    <p><a href="mailto:david.randall@colostate.edu">Colorado State University</a></p>
-                    <p><a href="mailto:svoelz@ucar.edu">National Center for Atmospheric Research</a></p>
+                    <p><a href="mailto:contact@areanddee.com">AreandDee LLC</a></p>
+                    <p><a href="mailto:info@mytorch.net">MyTorch.net</a></p>
                 </div>
                 <div class="funding-section">
                     <h3>Funding</h3>
-                    <p>Currently seeking funding...</p>
+                    <p>Currently seeking funding!</p>
                 </div>
             </div>
         </div>
@@ -100,9 +85,9 @@
         <!-- Full-width white strip for logos -->
         <div class="logo-strip-container">
             <div class="logo-strip">
-                <img src="../images/logos/csu-logo.png" alt="CSU Logo" height="64" width="auto">
-                <img src="../images/logos/mytorch-logo.png" alt="NCAR Logo" height="64" width="auto">
-                <img src="../images/logos/nvidia-logo.png" alt="NSF Logo" height="64" width="auto">
+                <img src="../images/logos/uwyoming-logo.png" alt="CSU Logo" height="64" width="auto">
+                <img src="../images/logos/mytorch-logo.png" alt="MyTorch Logo" height="64" width="auto">
+                <img src="../images/logos/nvidia-logo.png" alt="NVIDIA Logo" height="64" width="auto">
             </div>
         </div>
     </footer>
