--- a/pages/focus-area-4.html
+++ b/pages/focus-area-4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Focus Area - EarthWorks</title>
+    <title>Training</title>
     <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
@@ -12,8 +12,8 @@
     
         <!-- Center image container -->
         <div class="hero-background-container">
-            <img src="../images/backgrounds/cyber-being2.jpg" alt="Focus Area Banner" class="hero-background">
-            <h1 class="hero-title">Focus Area</h1>
+            <img src="../images/thumbnails/training.jpg" alt="Focus Area Banner" class="hero-background">
+            <h1 class="hero-title">Training</h1>
         
             <!-- Search container inside image area -->
             <div class="search-container">
@@ -34,10 +34,9 @@
             <a href="../index.html" class="nav-link">About EarthWorks</a>
             <a href="team.html" class="nav-link">Our Team</a>
             <a href="faqs.html" class="nav-link">FAQs</a>
-            <a href="code.html" class="nav-link">Code and Data</a>
-            <a href="papers.html" class="nav-link">Papers & Presentations</a>
-            <a href="related.html" class="nav-link">Related Efforts</a>
-            <a href="education.html" class="nav-link">Education</a>
+            <a href="code.html" class="nav-link">Software</a>
+            <a href="consulting.html" class="nav-link">Consulting</a>
+            <a href="education.html" class="nav-link">Training</a>
         </div>
     </nav>
 
@@ -74,12 +73,11 @@
             <div class="footer-content">
                 <div class="contact-section">
                     <h3>Contact</h3>
-                    <p><a href="mailto:david.randall@colostate.edu">Colorado State University</a></p>
-                    <p><a href="mailto:svoelz@ucar.edu">National Center for Atmospheric Research</a></p>
+                    <p><a href="mailto:contact@areanddee.com">AreandDee LLC</a></p>
                 </div>
                 <div class="funding-section">
                     <h3>Funding</h3>
-                    <p>Currently seeking funding.</p>
+                    <p>Currently seeking funding!</p>
                 </div>
             </div>
         </div>
@@ -87,9 +85,9 @@
         <!-- Full-width white strip for logos -->
         <div class="logo-strip-container">
             <div class="logo-strip">
-                <img src="../images/logos/csu-logo.png" alt="CSU Logo" height="64" width="auto">
-                <img src="../images/logos/ncar-logo.png" alt="NCAR Logo" height="64" width="auto">
-                <img src="../images/logos/nsf-logo.png" alt="NSF Logo" height="64" width="auto">
+                <img src="../images/logos/uwyoming-logo.png" alt="UWyoming Logo" height="64" width="auto">
+                <img src="../images/logos/mytorch-logo.png" alt="MyTorch Logo" height="64" width="auto">
+                <img src="../images/logos/nvidia-logo.png" alt="NVIDIA Logo" height="64" width="auto">
             </div>
         </div>
     </footer>
