--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
             <a href="pages/team.html" class="nav-link">Our Team</a>
             <a href="pages/faqs.html" class="nav-link">FAQs</a>
             <a href="pages/code.html" class="nav-link">Software</a>
-            <a href="pages/papers.html" class="nav-link">Demos</a>
-            <a href="pages/related.html" class="nav-link">Tools</a>
+            <a href="pages/consulting.html" class="nav-link">Consulting</a>
             <a href="pages/education.html" class="nav-link">Training</a>
         </div>
     </nav>
@@ -68,13 +67,13 @@
                 <div class="focus-item">
                     <img src="images/thumbnails/digital-earth.jpg" alt="Digital Twins" class="focus-thumbnail">
                     <div class="focus-content">
-                        <h3>Imagine pairing your proprietary data with open-source models to create a "best in class" Digital Twin.</h3>
+                        <h3>Imagine pairing your proprietary data with AI models to create a "best in class" Digital Twin.</h3>
                         <p>AreandDee can show you how...</p>
                         <a href="pages/focus-area-3.html" class="focus-link">Learn More →</a>
                     </div>
                 </div>
                 <div class="focus-item">
-                    <img src="images/thumbnails/mentorship.jpg" alt="Training" class="focus-thumbnail">
+                    <img src="images/thumbnails/training.jpg" alt="Training" class="focus-thumbnail">
                     <div class="focus-content">
                         <h3>Imagine receiving the training and support you need from a team of experts.</h3>
                         <p>Creating effective digital twins requires domain experts that understand the science, software, and data challenges.</p>
@@ -104,7 +103,7 @@
         <!-- Full-width white strip for logos -->
         <div class="logo-strip-container">
             <div class="logo-strip">
-                <img src="images/logos/csu-logo.png" alt="CSU Logo" height="64" width="auto">
+                <img src="images/logos/uwyoming-logo.png" alt="CSU Logo" height="64" width="auto">
                 <img src="images/logos/mytorch-logo.png" alt="MyTorch.net Logo" height="64" width="auto">
                 <img src="images/logos/nvidia-logo.png" alt="NVIDIA Logo" height="64" width="auto">
             </div>
