--- a/pages/code.html
+++ b/pages/code.html
@@ -36,8 +36,7 @@
             <a href="team.html" class="nav-link">Our Team</a>
             <a href="faqs.html" class="nav-link">FAQs</a>
             <a href="code.html" class="nav-link active">Software</a>
-            <a href="papers.html" class="nav-link">Demos</a>
-            <a href="related.html" class="nav-link">Tools</a>
+            <a href="consulting.html" class="nav-link">Consulting</a>
             <a href="education.html" class="nav-link">Training</a>
         </div>
     </nav>
@@ -73,12 +72,11 @@
             <div class="footer-content">
                 <div class="contact-section">
                     <h3>Contact</h3>
-                    <p><a href="mailto:david.randall@colostate.edu">Colorado State University</a></p>
-                    <p><a href="mailto:svoelz@ucar.edu">National Center for Atmospheric Research</a></p>
+                    <p><a href="mailto:contact@areanddee.com">AreandDee LLC</a></p>
                 </div>
                 <div class="funding-section">
                     <h3>Funding</h3>
-                    <p>Supported by the National Science Foundation</p>
+                    <p>Currently seeking funding!</p>
                 </div>
             </div>
         </div>
@@ -86,7 +84,7 @@
         <!-- Full-width white strip for logos -->
         <div class="logo-strip-container">
             <div class="logo-strip">
-                <img src="../images/logos/csu-logo.png" alt="CSU Logo" height="64" width="auto">
+                <img src="../images/logos/uwyoming-logo.png" alt="CSU Logo" height="64" width="auto">
                 <img src="../images/logos/mytorch-logo.png" alt="Mytorch Logo" height="64" width="auto">
                 <img src="../images/logos/nvidia-logo.png" alt="NVidia Logo" height="64" width="auto">
             </div>
