--- a/pages/focus-area-2.html
+++ b/pages/focus-area-2.html
@@ -35,8 +35,7 @@
             <a href="team.html" class="nav-link">Our Team</a>
             <a href="faqs.html" class="nav-link">FAQs</a>
             <a href="code.html" class="nav-link">Software</a>
-            <a href="papers.html" class="nav-link">Demos</a>
-            <a href="related.html" class="nav-link">Tools</a>
+            <a href="consulting.html" class="nav-link">Consulting</a>
             <a href="education.html" class="nav-link">Training</a>
         </div>
     </nav>
@@ -88,7 +87,7 @@
         <!-- Full-width white strip for logos -->
         <div class="logo-strip-container">
             <div class="logo-strip">
-                <img src="../images/logos/csu-logo.png" alt="CSU Logo" height="64" width="auto">
+                <img src="../images/logos/uwyoming-logo.png" alt="CSU Logo" height="64" width="auto">
                 <img src="../images/logos/mytorch-logo.png" alt="MyTorch.net Logo" height="64" width="auto">
                 <img src="../images/logos/nvidia-logo.png" alt="NVIDIA Logo" height="64" width="auto">
             </div>
