--- a/pages/team.html
+++ b/pages/team.html
@@ -142,7 +142,7 @@
             <div class="footer-content">
                 <div class="contact-section">
                     <h3>Contact</h3>
-                    <p><a href="mailto:contact@areanddee.com">Colorado State University</a></p>
+                    <p><a href="mailto:contact@areanddee.com">AreandDee LLC</a></p>
                 </div>
                 <div class="funding-section">
                     <h3>Funding</h3>
