Corrected grammar issues on focus-area 2 page.

--- a/pages/focus-area-2.html
+++ b/pages/focus-area-2.html
@@ -47,10 +47,10 @@
             
             <div class="focus-detail">
                 <h3>Overview</h3>
-                <p>Wait... doesn't the cloud solve that? Sort-of. We have seen various ranging from startups to mid size companies and even computing centers struggle with provisioning AI resources both in-house and in-cloud. Cost is a big issue: as demand has grown exponentially, so has the cost of high-end high accelerator cards. Then there's access: in the cloud, in times of high demand, there are just no instances to be had; in-house operations can find that ordering cards may involve a long lead time, provisioning them is difficult, as is estimating demand. Then there's data: training AI models requires tons of data. If you write out, or worse save the data your generating, you're dead.</p>
+                <p>Wait... doesn't the cloud solve that? Sort-of. We have seen various organizations, ranging from startups to mid size companies and even large computing centers struggle with provisioning AI resources both in-house and in the cloud. Cost is a big issue: as demand has grown exponentially, so has the cost of high-end high accelerator cards. Then there's access: in the cloud, in times of high demand, there are just no instances to be had; in-house operations can find that ordering cards may involve a long lead-time, provisioning them is difficult, as is estimating demand. Then there's data: training AI models requires tons of data. If you write out, or worse save the data your generating, you're dead.</p>
                 
                 <h3>Our Strategy</h3>
-                <p>AreandDee's approach seeks to lowers the infrastructural entry cost as far as possible, and avoid expensive bottlenecks. <p>
+                <p>AreandDee's approach seeks to lower the infrastructural entry cost and avoid expensive bottlenecks. <p>
                 <ul>
                     <li>Work with large, established resource providers to obtain block allocations of resources.</li>
                     <li>Work with startup resource providers like MyTorch.Net, to obtain interactive remote access to powerful AI systems.</li>
