Fixed tab lable to purge EarthWorks

--- a/pages/focus-area-4.html
+++ b/pages/focus-area-4.html
@@ -31,7 +31,7 @@
     <!-- Navigation -->
     <nav class="main-nav">
         <div class="nav-container">
-            <a href="../index.html" class="nav-link">About EarthWorks</a>
+            <a href="../index.html" class="nav-link">Home</a>
             <a href="team.html" class="nav-link">Our Team</a>
             <a href="faqs.html" class="nav-link">FAQs</a>
             <a href="code.html" class="nav-link">Software</a>
