Updated training contact with new areanddee mail group.

--- a/pages/education.html
+++ b/pages/education.html
@@ -79,8 +79,8 @@
         <div class="footer-container">
             <div class="footer-content">
                 <div class="contact-section">
-                    <h3>Contact</h3>
-                    <p><a href="mailto:richard.d.loft@areanddee.com">AreandDee LLC</a></p>
+                    <h3>Training</h3>
+                    <p><a href="mailto:training@areanddee.com">AreandDee LLC</a></p>
                 </div>
                 <div class="funding-section">
                     <h3>Funding</h3>
